--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html lang="EN">
 
 <head>
-    <title>Superfluid.energy : Oekrainers met solar panels versus het (russian) gas</title>
+    <title>Superfluid energy: Holland Solar</title>
 
 
 
@@ -9,7 +9,8 @@
 
 <body>
 
-
+    <h1>Opleveringsrapport (voor installaties van maximaal 3 keer 25 Ampère) </h1>
+    <h2>Photovoltaïsche-installaties (pv)</h2>
     <div id="input"></div>
 
 </body>
